[gd_scene load_steps=10 format=3 uid="uid://bgonf7vvwxost"]

[ext_resource type="Script" path="res://main.gd" id="1_np2ea"]
[ext_resource type="PackedScene" uid="uid://bxh5hj06nnn6o" path="res://player1paddleV.tscn" id="2_1xvsb"]
[ext_resource type="PackedScene" uid="uid://3x4s2gcogrvf" path="res://hud.tscn" id="2_g051u"]
[ext_resource type="PackedScene" uid="uid://be3ouu4t0b87s" path="res://player2paddleV.tscn" id="3_eqwh7"]
[ext_resource type="PackedScene" uid="uid://l4mtx1ppnme5" path="res://player1paddleH.tscn" id="4_1w71h"]
[ext_resource type="PackedScene" uid="uid://dd28q4107lsgh" path="res://ball.tscn" id="5_0vuxy"]
[ext_resource type="PackedScene" uid="uid://cnkv65m5rvoow" path="res://player2paddleH.tscn" id="6_a1fpn"]
[ext_resource type="Script" path="res://path_lines.gd" id="8_b3waq"]

[sub_resource type="SystemFont" id="SystemFont_1x504"]
font_names = PackedStringArray("M42_FLIGHT 721")

[node name="Game" type="Node"]
script = ExtResource("1_np2ea")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Player2TopBorder" type="ColorRect" parent="."]
offset_right = 243.0
offset_bottom = 1.0
color = Color(1, 0.980392, 0, 0.52549)

[node name="Player2RightBorder" type="ColorRect" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -121.0
offset_bottom = 121.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 0.980392, 0, 0.52549)

[node name="Player1LeftBorder" type="ColorRect" parent="."]
offset_right = 1.0
offset_bottom = 242.0
color = Color(0, 0.980392, 1, 0.52549)

[node name="Player1BottomBorder" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.5
offset_top = -1.0
offset_right = 121.5
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.980392, 1, 0.52549)

[node name="ShowPathsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = 15.0
offset_right = 33.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = SubResource("SystemFont_1x504")
theme_override_font_sizes/font_size = 4
text = "Show Paths"

[node name="PaddlePathsDrawer" type="Node2D" parent="."]
script = ExtResource("8_b3waq")

[node name="HUD" parent="." instance=ExtResource("2_g051u")]

[node name="Player1PaddleV" parent="." instance=ExtResource("2_1xvsb")]
position = Vector2(32, 60)

[node name="Player1PaddleH" parent="." instance=ExtResource("4_1w71h")]
position = Vector2(79, 224)

[node name="Player2PaddleV" parent="." instance=ExtResource("3_eqwh7")]
position = Vector2(224, 176)

[node name="Player2PaddleH" parent="." instance=ExtResource("6_a1fpn")]
position = Vector2(182, 18)

[node name="Ball" parent="." instance=ExtResource("5_0vuxy")]
position = Vector2(126, 111)

[connection signal="pressed" from="ShowPathsButton" to="PaddlePathsDrawer" method="_on_show_paths_button_pressed"]
[connection signal="player_won" from="HUD" to="." method="player_won"]
[connection signal="player_won" from="HUD" to="HUD" method="_on_player_won"]
[connection signal="scored" from="Ball" to="." method="scored"]
[connection signal="scored" from="Ball" to="HUD" method="update_score"]
